Insere responsividade na tela de home

--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -1,3 +1,6 @@
 $blue-1: #bbdfff;
 $purple-1: #e7c1ff;
-$grenn-1: #bff0cc;
+$green-1: #bff0cc;
+$grey-1:#F3F6F7;
+$deep-blue: #203b43;
+$deep-blue-2:#88979b;
